Add page layout

--- a/modules/look/client-angular/ui-material/styles/styles.scss
+++ b/modules/look/client-angular/ui-material/styles/styles.scss
@@ -3,3 +3,19 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
