Update page layout to the working version

--- a/modules/look/client-angular/ui-material/components/page-layout/PageLayout.html
+++ b/modules/look/client-angular/ui-material/components/page-layout/PageLayout.html
@@ -1,11 +1,9 @@
-<section className="d-flex flex-column flex-grow-1">
-  <section className="d-flex flex-column flex-grow-1 flex-shrink-0">
-    <section className="d-flex flex-column">NavBar</section>
+<section class="d-flex flex-column page-layout">
+  <section class="d-flex flex-column flex-grow-1 flex-shrink-0">
+    <section class="d-flex flex-column">NavBar</section>
     <div><ng-content></ng-content></div>
   </section>
-  <footer className="app-footer d-flex flex-shrink-0 ">
-    <span>
-      &copy; {new Date().getFullYear()}. {settings.app.name}.
-    </span>
+  <footer class="app-footer d-flex flex-shrink-0 ">
+    <span> &copy; 2019. Apollo Starter Kit. </span>
   </footer>
 </section>
