--- a/modules/look/client-angular/ui-material/components/page-layout/PageLayout.scss
+++ b/modules/look/client-angular/ui-material/components/page-layout/PageLayout.scss
@@ -1,6 +1,10 @@
 .app-footer {
   margin-top: 10px;
-  line-height: 40px;
   height: 40px;
   justify-content: center;
+  align-items: center;
+}
+
+.page-layout {
+  min-height: 100vh;
 }
