--- a/modules/look/client-angular/ui-material/styles/styles.scss
+++ b/modules/look/client-angular/ui-material/styles/styles.scss
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 body {
   font-family: 'Roboto', sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 .d-flex {
