Add current year and app name to footer

--- a/modules/look/client-angular/ui-material/components/page-layout/PageLayout.html
+++ b/modules/look/client-angular/ui-material/components/page-layout/PageLayout.html
@@ -4,6 +4,6 @@
     <div><ng-content></ng-content></div>
   </section>
   <footer class="app-footer d-flex flex-shrink-0 ">
-    <span> &copy; 2019. Apollo Starter Kit. </span>
+    <span> &copy; {{ currentYear }}. {{ appName }}. </span>
   </footer>
 </section>
