Add navbar component to the module and page layout

--- a/modules/look/client-angular/ui-material/components/page-layout/PageLayout.html
+++ b/modules/look/client-angular/ui-material/components/page-layout/PageLayout.html
@@ -1,6 +1,6 @@
 <section class="d-flex flex-column page-layout">
   <section class="d-flex flex-column flex-grow-1 flex-shrink-0">
-    <section class="d-flex flex-column">NavBar</section>
+    <section class="d-flex flex-column"><navbar></navbar></section>
     <div><ng-content></ng-content></div>
   </section>
   <footer class="app-footer d-flex flex-shrink-0 ">
