Add LanguagePicker component

--- a/modules/look/client-react/ui-material/styles/styles.scss
+++ b/modules/look/client-react/ui-material/styles/styles.scss
@@ -4,6 +4,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 .nav-link {
