Add Alert component, SignUp, ForgotPassword, ResetPassword pages

--- a/modules/look/client-react/ui-material/styles/styles.scss
+++ b/modules/look/client-react/ui-material/styles/styles.scss
@@ -7,6 +7,10 @@
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
+.text-center {
+  text-align: center !important;
+}
+
 .nav-link {
 }
 
